fix: text align left for markdown content

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -49,6 +49,10 @@ $common-margin: 24px;
     }
   }
 
+  p {
+    text-align: left;
+  }
+
   a {
     color: var(--color-link);
   }
